# exerciseSet4

./: .CMakeLists.txt.swp  .compute_S.c.swp  .compute_S_MPI.c.swp  .compute_S_OpenMP.c.swp  .dropbox  CMakeLists.txt  CMakeListsOld.txt  README.txt  a.out  compute_S.c  compute_S_MPI.c  compute_S_MPI_and_OpenMP.c  compute_S_OpenMP.c  exercise3.sh  exercise3short.sh  exercise6.sh  exerciseSet4.rar  mpi.out  mpi_and_openmp.out  powerOfTwo.c  printResult.c  utils.h
build_withOpenMP/: CMakeCache.txt  Makefile  cmake_install.cmake  compute_S  compute_S_MPI  compute_S_OpenMP
build_with_OpenMP/: CMakeCache.txt  Makefile  cmake_install.cmake  compute_S  compute_S_MPI  compute_S_OpenMP
latex/: exercise3_plot_compute_S_MPI.txt  main.aux  main.tex
mortenFiles/: a.out  compute_S_MPI_and_OpenMP3.c  compute_S_Morten.c  timings.txt  timings_serial.txt
oldFiles/: exercise1.c  exercise2.c  exercise3.c  exercise4.c
results/: exercise3_plot_compute_S.txt  exercise3_plot_compute_S_OpenMP.txt  exercise3_table.txt  exercise6.txt
